# levelcode

./: .env.example  .gitattributes  .gitignore  .levelcodeignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATIVE_FEATURES_DEMO.md  CUserskkvintest-output.txt  INFISICAL_SETUP_GUIDE.md  INTEGRATION-PLAN.md  LICENSE  NOTICE  README.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY.md  WINDOWS.md  authentication.knowledge.md  bunfig.toml  eslint.config.js  knowledge.md  package.json  tsconfig.base.json  tsconfig.json  vercel.json
.agents/: claude-code-cli.ts  codex-cli.ts  gemini-cli.ts  levelcode-local-cli.ts  notion-agent.ts  notion-researcher.ts  package.json  tsconfig.json
.bin/: bun
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  knowledge.md
agents/: commander-lite.ts  commander.ts  constants.ts  (+3 more)
agents-graveyard/: agent-builder.ts  base2-fast-subgoals.ts  base2-gpt-5-worker.ts  base2-with-context-discoverer.ts  base2-with-task-researcher.ts  brainstormer.ts  charles.ts  codebase-commands-explorer.ts  context-discoverer.ts  creative-catalyst.ts  decomposing-reviewer.ts  decomposing-thinker.ts  deep-code-reviewer.ts  editor-lite.ts  editor.ts  file-lister-max.ts  git-committer.ts  independent-thinker.ts  knowledge-keeper.ts  read-only-commander-lite.ts  read-only-commander.ts  scout.ts  simple-code-reviewer.ts  validator-gpt-5.ts  validator.ts
python-app/: README.md  knowledge.md  pyproject.toml
python-app/src/levelcode/: __init__.py
python-app/src/levelcode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+1526 files in other folders)
