[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "levelcode"
version = "0.1.1"
authors = [
  { name = "LevelCode Team", email = "founders@levelcode.vercel.app" },
]
description = "An AI-powered coding assistant (coming soon, use npm for now)"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
"Homepage" = "https://github.com/manifoldmarkets/manicode"
"Bug Tracker" = "https://github.com/manifoldmarkets/manicode/issues"

[project.scripts]
manicode = "manicode:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
